--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel serve ./public/index.html",
+    "dev": "parcel ./public/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,6 +15,10 @@
     "@types/react-dom": "^17.0.0",
     "parcel": "^2.0.0-beta.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "sass": "^1.32.0"
+  },
+  "dependencies": {
+    "@svgdotjs/svg.js": "^3.0.16"
   }
 }
