--- a/package.json
+++ b/package.json
@@ -4,23 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel ./public/index.html",
+    "dev": "parcel serve public/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "parcel": "^2.0.0-beta.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "sass": "^1.32.0"
-  },
-  "dependencies": {
-    "@svgdotjs/svg.js": "^3.0.16",
-    "@svgdotjs/svg.panzoom.js": "^2.1.1",
-    "mathjs": "^8.1.1"
+    "parcel": "^2.1.1"
   }
 }
