--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.1.1"
+    "jest": "^27.4.7",
+    "parcel": "^2.1.1",
+    "prettier": "^2.5.1"
   }
 }
