--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^27.4.7",
+    "@types/jest": "^27.4.1",
+    "jest": "^27.5.1",
     "parcel": "^2.1.1",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "ts-jest": "^27.1.4",
+    "typescript": "^4.6.3"
   }
 }
