--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "rxjs": "^7.5.5"
   }
 }
